Dev/src/FinancialForce ERP Core/objects/ScheduledJob__c.object
<CustomObject>
    <customHelpPage>ScheduledJobHelp</customHelpPage>
    <description>A job that can be scheduled or run immediately</description>
    <fields>
        <fullName>CronExpression__c</fullName>
        <label>Cron Expression</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeveloperName__c</fullName>
        <label>Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <label>Implementation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NotSchedulable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the job can be scheduled.</description>
        <inlineHelpText>Indicates whether the job can be scheduled.</inlineHelpText>
        <label>Not Schedulable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedulable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the job can be scheduled.</description>
        <inlineHelpText>Indicates whether the job can be scheduled.</inlineHelpText>
        <label>Schedulable</label>
        <type>Checkbox</type>
    </fields>
    <label>Scheduled Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>